syntax = "proto3";

package cluster.v1;

option go_package = "api/cluster/v1;v1";

message ClusterID {
  int32 id = 1;
}

message ClusterName {
  string name = 1;
}

message Clusters {
  repeated Cluster clusters = 1;
}

message Cluster {
  int32 id = 1;
  string cluster_name = 2;
  string config = 3;
  string addons = 4;
  repeated Node nodes = 5;
  bool applyed = 6;
}

message Node {
  int32 id = 1;
  string host = 2;
  string name = 3;
  string user = 4;
  string password = 5;
  string sudo_password = 6;
  repeated string role = 7;
}