syntax = "proto3";

package cluster.v1alpha1;

option go_package = "api/cluster/v1alpha1;v1alpha1";

message ClusterType {
    int32 id = 1 [json_name = "id"];
    string name = 2 [json_name = "name"];
    bool is_cloud = 3 [json_name = "is_cloud"];
}

message ClusterTypes {
    repeated ClusterType cluster_types = 1 [json_name = "cluster_types"];
}

message ClusterStatus {
    int32 id = 1 [json_name = "id"];
    string name = 2 [json_name = "name"];
}

message ClusterStatuses {
    repeated ClusterStatus cluster_statuses = 1 [json_name = "cluster_statuses"];
}

message ClusterLevel {
    int32 id = 1 [json_name = "id"];
    string name = 2 [json_name = "name"];
}

message ClusterLevels {
    repeated ClusterLevel cluster_levels = 1 [json_name = "cluster_levels"];
}

message NodeStatus {
    int32 id = 1 [json_name = "id"];
    string name = 2 [json_name = "name"];
}

message NodeStatuses {
    repeated NodeStatus node_statuses = 1 [json_name = "node_statuses"];
}


message NodeGroupType {
    int32 id = 1 [json_name = "id"];
    string name = 2 [json_name = "name"];
}

message NodeGroupTypes {
    repeated NodeGroupType node_group_types = 1 [json_name = "node_group_types"];
}

message NodeRole {
    int32 id = 1 [json_name = "id"];
    string name = 2 [json_name = "name"];
}

message NodeRoles {
    repeated NodeRole node_roles = 1 [json_name = "node_roles"];
}

message ResourceType {
    int32 id = 1 [json_name = "id"];
    string name = 2 [json_name = "name"];
}

message ResourceTypes {
    repeated ResourceType resource_types = 1 [json_name = "resource_types"];
}

message Regions {
    repeated string regions = 1 [json_name = "regions"];
}

message ClusterArgs {
    int64 id = 1 [json_name = "id"];
    string name = 2 [json_name = "name"];
    int32 type = 3 [json_name = "type"];
    string public_key = 4 [json_name = "public_key"];
    string region = 5 [json_name = "region"];
    string access_id = 6 [json_name = "access_id"];
    string access_key = 7 [json_name = "access_key"];
    repeated NodeArgs nodes = 8 [json_name = "nodes"];
    int64 node_id = 9 [json_name = "node_id"];
    string private_key = 10 [json_name = "private_key"];
}

message NodeArgs {
    string ip = 1 [json_name = "ip"];
    string user = 2 [json_name = "user"];
    int32 role = 3 [json_name = "role"];
    int64 id = 4 [json_name = "id"];
}

message ClusterList {
    repeated Cluster clusters = 1 [json_name = "clusters"];
}

message Cluster {
    int64 id = 1 [json_name = "id"];
    string name = 2 [json_name = "name"];
    string version = 3 [json_name = "version"];
    string api_server_address = 4 [json_name = "api_server_address"];
    int32 status = 5 [json_name = "status"];
    int32 type = 6 [json_name = "type"];
    string public_key = 7 [json_name = "public_key"];
    string private_key = 8 [json_name = "private_key"];
    string region = 9 [json_name = "region"];
    string access_id = 10 [json_name = "access_id"];
    string access_key = 11 [json_name = "access_key"];
    string create_at = 12 [json_name = "create_at"];
    string update_at = 13 [json_name = "update_at"];
    repeated Node nodes = 14 [json_name = "nodes"];
    repeated NodeGroup node_groups = 15 [json_name = "node_groups"];
    BostionHost bostion_host = 16 [json_name = "bostion_host"];
}

message NodeGroup {
}

message Node {
    int64 id = 1 [json_name = "id"];
}

message BostionHost {
    int64 id = 1 [json_name = "id"];
}

message ClusterLogsRequest {
    int64 cluster_id = 1 [json_name = "cluster_id"];
    int32 tail_lines = 2 [json_name = "tail_lines"];
    string cluster_name = 3 [json_name = "cluster_name"];
    int32 current_line = 4 [json_name = "current_line"];
}

message ClusterLogsResponse {
    string logs = 1 [json_name = "logs"];
    int32 last_line = 2 [json_name = "last_line"];
}